--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -163,6 +163,8 @@
     "cv1.add_shapes(\n",
     "    objects[name], \n",
     "    states[name],\n",
+    "    cad_width=500,\n",
+    "    height=3000,\n",
     "    #tools=False,\n",
     "    #ortho=False,\n",
     "    control=\"trackball\",\n",
@@ -189,6 +191,24 @@
     "    pan_speed=0.5,\n",
     "    rotate_speed=1.0,\n",
     "    js_debug=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab31ed53-c64c-46f2-8a8a-a34741d8efb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"boxes\"\n",
+    "show(\n",
+    "    objects[name], \n",
+    "    states[name],\n",
+    "    title=\"CVW 1\",\n",
+    "    cad_width=800,\n",
+    "    height=600,\n",
+    "    glass=False,\n",
     ")"
    ]
   },
