adapt test to changes

--- a/notebooks/Classic-OCC-Bottle.ipynb
+++ b/notebooks/Classic-OCC-Bottle.ipynb
@@ -298,10 +298,10 @@
     "            \"edges\": edges\n",
     "          },\n",
     "          \"color\": \"#e8b024\",\n",
-    "          \"bb\": bb\n",
     "        }\n",
     "      ],\n",
-    "      \"loc\": None\n",
+    "      \"loc\": None,\n",
+    "          \"bb\": bb\n",
     "    }\n",
     "\n",
     "    states = {f\"/{group}/{name}\":[1,1]}\n",
@@ -374,7 +374,7 @@
     "    title=\"OCC1\", \n",
     "    anchor=\"split-right\",\n",
     "    axes=True,\n",
-    "    ortho=False,\n",
+    "    ortho=True,\n",
     "    control=\"orbit\",\n",
     "    grid=(False, False, False),\n",
     "    transparent=True,\n",
