--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -61,6 +61,7 @@
     "    objects[name], \n",
     "    states[name],\n",
     "    control=control,\n",
+    "    up=\"Z\",\n",
     "    cad_width=750,\n",
     "    tree_width=250,\n",
     "    height=600,\n",
@@ -68,6 +69,7 @@
     "    js_debug=False,\n",
     "    collapse=1,\n",
     "    theme=\"browser\",\n",
+    "\n",
     ")"
    ]
   },
@@ -163,8 +165,8 @@
     "cv1.add_shapes(\n",
     "    objects[name], \n",
     "    states[name],\n",
-    "    cad_width=500,\n",
-    "    height=3000,\n",
+    "    cad_width=700,\n",
+    "    height=600,\n",
     "    #tools=False,\n",
     "    #ortho=False,\n",
     "    control=\"trackball\",\n",
@@ -175,15 +177,15 @@
     "    transparent=True,\n",
     "    #black_edges=True,\n",
     "\n",
-    "    normal_len=0,\n",
+    "    normal_len=2,\n",
     "    default_edge_color=\"#707070\",\n",
     "    default_opacity=0.5,\n",
     "    ambient_intensity=0.5,\n",
     "    direct_intensity=0.3,\n",
     "\n",
-    "    reset_camera=True,\n",
-    "    position = (865.4844022079983, -276.23389988421786, 335.21716816984906),\n",
-    "    quaternion = (0.43557639340677845, 0.3648618806188253, 0.4409953598863984, 0.6947460731351442),\n",
+    "#    reset_camera=True,\n",
+    "#    position = (865.4844022079983, -276.23389988421786, 335.21716816984906),\n",
+    "#    quaternion = (0.43557639340677845, 0.3648618806188253, 0.4409953598863984, 0.6947460731351442),\n",
     "    zoom=0.8,\n",
     "    timeit=False,\n",
     "\n",
@@ -191,6 +193,7 @@
     "    pan_speed=0.5,\n",
     "    rotate_speed=1.0,\n",
     "    js_debug=True,\n",
+    "    up=\"Y\"\n",
     ")"
    ]
   },
@@ -209,6 +212,7 @@
     "    cad_width=800,\n",
     "    height=600,\n",
     "    glass=False,\n",
+    "    up=\"Y\",\n",
     ")"
    ]
   },
@@ -241,11 +245,11 @@
     "    axes=True,\n",
     "    grid=(True, False, False),\n",
     "    ticks=40,\n",
-    "    transparent=True,\n",
+    "    # transparent=True,\n",
     "    #black_edges=True,\n",
     "\n",
     "    normal_len=2,\n",
-    "    default_edge_color=\"#707070\",\n",
+    "    default_edge_color=\"#f0f0f0\",\n",
     "    default_opacity=0.5,\n",
     "    ambient_intensity=0.5,\n",
     "    direct_intensity=0.3,   \n",
