--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -676,7 +676,7 @@
     "    control=\"orbit\",\n",
     "    position=(-43.3, 73.7, -39.3),\n",
     "    zoom=0.5,\n",
-    "    reset_camera=True\n",
+    "    reset_camera=True,\n",
     ")\n",
     "cv.position, cv.quaternion, cv.target, cv.zoom"
    ]
