--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -54,8 +54,8 @@
    "outputs": [],
    "source": [
     "name = \"boxes\"\n",
-    "control = \"trackball\"\n",
-    "#control = \"orbit\"\n",
+    "#control = \"trackball\"\n",
+    "control = \"orbit\"\n",
     "\n",
     "cv = show(\n",
     "    objects[name], \n",
@@ -69,7 +69,6 @@
     "    js_debug=False,\n",
     "    collapse=1,\n",
     "    theme=\"browser\",\n",
-    "\n",
     ")"
    ]
   },
@@ -193,7 +192,7 @@
     "    pan_speed=0.5,\n",
     "    rotate_speed=1.0,\n",
     "    js_debug=True,\n",
-    "    up=\"Y\"\n",
+    "    up=\"Z\"\n",
     ")"
    ]
   },
