now really add the changes

--- a/notebooks/Classic-OCC-Bottle.ipynb
+++ b/notebooks/Classic-OCC-Bottle.ipynb
@@ -31,20 +31,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "##Copyright 2009-2015 Thomas Paviot (tpaviot@gmail.com)\n",
+    "##\n",
+    "##This file is part of pythonOCC.\n",
+    "##\n",
+    "##pythonOCC is free software: you can redistribute it and/or modify\n",
+    "##it under the terms of the GNU Lesser General Public License as published by\n",
+    "##the Free Software Foundation, either version 3 of the License, or\n",
+    "##(at your option) any later version.\n",
+    "##\n",
+    "##pythonOCC is distributed in the hope that it will be useful,\n",
+    "##but WITHOUT ANY WARRANTY; without even the implied warranty of\n",
+    "##MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\n",
+    "##GNU Lesser General Public License for more details.\n",
+    "##\n",
+    "##You should have received a copy of the GNU Lesser General Public License\n",
+    "##along with pythonOCC.  If not, see <http://www.gnu.org/licenses/>.\n",
+    "\n",
     "import math\n",
     "\n",
-    "from OCC.Core.gp import (gp_Pnt, gp_OX, gp_Vec, gp_Trsf, gp_DZ, gp_Ax2, gp_Ax3,\n",
-    "                         gp_Pnt2d, gp_Dir2d, gp_Ax2d, gp_Pln)\n",
+    "from OCC.Core.gp import (\n",
+    "    gp_Pnt,\n",
+    "    gp_OX,\n",
+    "    gp_Vec,\n",
+    "    gp_Trsf,\n",
+    "    gp_DZ,\n",
+    "    gp_Ax2,\n",
+    "    gp_Ax3,\n",
+    "    gp_Pnt2d,\n",
+    "    gp_Dir2d,\n",
+    "    gp_Ax2d,\n",
+    "    gp_Pln,\n",
+    ")\n",
     "from OCC.Core.GC import GC_MakeArcOfCircle, GC_MakeSegment\n",
     "from OCC.Core.GCE2d import GCE2d_MakeSegment\n",
     "from OCC.Core.Geom import Geom_CylindricalSurface\n",
     "from OCC.Core.Geom2d import Geom2d_Ellipse, Geom2d_TrimmedCurve\n",
-    "from OCC.Core.BRepBuilderAPI import (BRepBuilderAPI_MakeEdge, BRepBuilderAPI_MakeWire,\n",
-    "                                     BRepBuilderAPI_MakeFace, BRepBuilderAPI_Transform)\n",
+    "from OCC.Core.BRepBuilderAPI import (\n",
+    "    BRepBuilderAPI_MakeEdge,\n",
+    "    BRepBuilderAPI_MakeWire,\n",
+    "    BRepBuilderAPI_MakeFace,\n",
+    "    BRepBuilderAPI_Transform,\n",
+    ")\n",
     "from OCC.Core.BRepPrimAPI import BRepPrimAPI_MakePrism, BRepPrimAPI_MakeCylinder\n",
     "from OCC.Core.BRepFilletAPI import BRepFilletAPI_MakeFillet\n",
     "from OCC.Core.BRepAlgoAPI import BRepAlgoAPI_Fuse\n",
-    "from OCC.Core.BRepOffsetAPI import BRepOffsetAPI_MakeThickSolid, BRepOffsetAPI_ThruSections\n",
+    "from OCC.Core.BRepOffsetAPI import (\n",
+    "    BRepOffsetAPI_MakeThickSolid,\n",
+    "    BRepOffsetAPI_ThruSections,\n",
+    ")\n",
     "from OCC.Core.BRepLib import breplib\n",
     "from OCC.Core.BRep import BRep_Builder\n",
     "from OCC.Core.GeomAbs import GeomAbs_Plane\n",
@@ -54,9 +89,6 @@
     "from OCC.Core.TopAbs import TopAbs_EDGE, TopAbs_FACE\n",
     "from OCC.Core.TopTools import TopTools_ListOfShape\n",
     "\n",
-    "from OCC.Core.Bnd import Bnd_Box\n",
-    "from OCC.Core.BRepBndLib import brepbndlib_Add\n",
-    "from OCC.Core.BRepMesh import BRepMesh_IncrementalMesh\n",
     "\n",
     "def face_is_plane(face: TopoDS_Face) -> bool:\n",
     "    \"\"\"\n",
@@ -73,20 +105,6 @@
     "    \"\"\"\n",
     "    return BRepAdaptor_Surface(aFace, True).Plane()\n",
     "\n",
-    "def get_boundingbox(shape, tol=1e-6, use_mesh=True):\n",
-    "    bbox = Bnd_Box()\n",
-    "    bbox.SetGap(tol)\n",
-    "    if use_mesh:\n",
-    "        mesh = BRepMesh_IncrementalMesh()\n",
-    "        mesh.SetParallelDefault(True)\n",
-    "        mesh.SetShape(shape)\n",
-    "        mesh.Perform()\n",
-    "        if not mesh.IsDone():\n",
-    "            raise AssertionError(\"Mesh not done.\")\n",
-    "    brepbndlib_Add(shape, bbox, use_mesh)\n",
-    "\n",
-    "    xmin, ymin, zmin, xmax, ymax, zmax = bbox.Get()\n",
-    "    return {\"xmin\": xmin, \"ymin\": ymin, \"zmin\":zmin, \"xmax\": xmax, \"ymax\": ymax, \"zmax\":zmax}\n",
     "\n",
     "height = 70\n",
     "width = 50\n",
@@ -164,7 +182,7 @@
     "myBody_step2 = BRepAlgoAPI_Fuse(mkFillet.Shape(), mkCylinder.Shape())\n",
     "\n",
     "# Our goal is to find the highest Z face and remove it\n",
-    "zMax = -1.\n",
+    "zMax = -1.0\n",
     "\n",
     "# We have to work our way through all the faces to find the highest Z face so we can remove it for the shell\n",
     "aFaceExplorer = TopExp_Explorer(myBody_step2.Shape(), TopAbs_FACE)\n",
@@ -183,7 +201,12 @@
     "facesToRemove = TopTools_ListOfShape()\n",
     "facesToRemove.Append(aFace)\n",
     "\n",
-    "myBody_step3 = BRepOffsetAPI_MakeThickSolid(myBody_step2.Shape(), facesToRemove, -thickness / 50.0, 0.001)\n",
+    "mk_thick_solid = BRepOffsetAPI_MakeThickSolid()\n",
+    "mk_thick_solid.MakeThickSolidByJoin(\n",
+    "    myBody_step2.Shape(), facesToRemove, -thickness / 50.0, 0.001\n",
+    ")\n",
+    "mk_thick_solid.Build()\n",
+    "myBody_step3 = mk_thick_solid.Shape()\n",
     "\n",
     "# Set up our surfaces for the threading on the neck\n",
     "neckAx2_Ax3 = gp_Ax3(neckLocation, gp_DZ())\n",
@@ -233,9 +256,9 @@
     "bottle = TopoDS_Compound()\n",
     "aBuilder = BRep_Builder()\n",
     "aBuilder.MakeCompound(bottle)\n",
-    "aBuilder.Add(bottle, myBody_step3.Shape())\n",
+    "aBuilder.Add(bottle, myBody_step3)\n",
     "aBuilder.Add(bottle, myThreading)\n",
-    "print(\"bottle finished\")\n"
+    "print(\"bottle finished\")"
    ]
   },
   {
