binder also works now

--- a/notebooks/Classic-OCC-Bottle.ipynb
+++ b/notebooks/Classic-OCC-Bottle.ipynb
@@ -268,6 +268,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from OCC.Core.Bnd import Bnd_Box\n",
+    "from OCC.Core.BRepBndLib import brepbndlib_Add\n",
+    "from OCC.Core.BRepMesh import BRepMesh_IncrementalMesh\n",
+    "\n",
+    "def get_boundingbox(shape, tol=1e-6, use_mesh=True):\n",
+    "    bbox = Bnd_Box()\n",
+    "    bbox.SetGap(tol)\n",
+    "    if use_mesh:\n",
+    "        mesh = BRepMesh_IncrementalMesh()\n",
+    "        mesh.SetParallelDefault(True)\n",
+    "        mesh.SetShape(shape)\n",
+    "        mesh.Perform()\n",
+    "        if not mesh.IsDone():\n",
+    "            raise AssertionError(\"Mesh not done.\")\n",
+    "    brepbndlib_Add(shape, bbox, use_mesh)\n",
+    "\n",
+    "    xmin, ymin, zmin, xmax, ymax, zmax = bbox.Get()\n",
+    "    return {\"xmin\": xmin, \"ymin\": ymin, \"zmin\":zmin, \"xmax\": xmax, \"ymax\": ymax, \"zmax\":zmax}\n",
+    "    \n",
     "bb = get_boundingbox(bottle)"
    ]
   },
