adapt to changed API

--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -21,7 +21,8 @@
     "import ipywidgets as widgets\n",
     "from cad_viewer_widget import (\n",
     "    AnimationTrack, CadViewer, show, open_viewer, \n",
-    "    get_sidecar, get_sidecars, close_sidecar, close_sidecars, get_default_sidecar, set_default_sidecar\n",
+    "    get_sidecar, get_sidecars, close_sidecar, close_sidecars, get_default_sidecar, set_default_sidecar,\n",
+    "    Collapse, Camera\n",
     ")\n",
     "\n",
     "from cad_viewer_widget.utils import numpyify\n",
@@ -36,6 +37,40 @@
     "\n",
     "    with open(f\"../examples/{name}-states.json\", \"r\") as fd:\n",
     "        states[name] = json.load(fd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5da9e3e-b160-4db8-b683-da60aacd9938",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"boxes\"\n",
+    "show(    \n",
+    "    objects[name], \n",
+    "    states[name],\n",
+    "    reset_camera=Camera.KEEP,\n",
+    "    title=\"CVW 2\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb2624b8-24de-4d1f-baa0-0cee3f0ff76c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"hexapod\"\n",
+    "cv = show(\n",
+    "    objects[name],\n",
+    "    states[name],\n",
+    "    title=\"CVW 2\",\n",
+    "    collapse=Collapse.ROOT,\n",
+    "    glass=True,\n",
+    "    reset_camera=Camera.KEEP\n",
+    ")"
    ]
   },
   {
@@ -66,29 +101,21 @@
     "    tree_width=250,\n",
     "    height=600,\n",
     "    glass=False,\n",
-    "    js_debug=False,\n",
-    "    collapse=1,\n",
+    "    debug=False,\n",
+    "    collapse=Collapse.LEAVES,\n",
     "    theme=\"browser\",\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7324f596-ef6c-45b8-a1f0-e918ab84ca1b",
+   "id": "7968b5ee-e28a-4416-b24b-88e5a864abcc",
    "metadata": {},
    "source": [
     "## Exports\n",
     "\n",
-    "**Modify view before exporting**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b19aff3-26b5-435e-899f-016a6459fefe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "**Modify view before exporting**\n",
+    "\n",
     "cv.export_png(\"boxes.png\")"
    ]
   },
@@ -173,14 +200,14 @@
     "    axes0=False,\n",
     "    grid=(True,True, False),\n",
     "    ticks=10,\n",
-    "    transparent=True,\n",
+    "    transparent=False,\n",
     "    #black_edges=True,\n",
     "\n",
     "    normal_len=2,\n",
-    "    default_edge_color=\"#707070\",\n",
+    "    default_edgecolor=\"#707070\",\n",
     "    default_opacity=0.5,\n",
-    "    ambient_intensity=0.5,\n",
-    "    direct_intensity=0.3,\n",
+    "    ambient_intensity=1.0,\n",
+    "    direct_intensity=1.1,\n",
     "\n",
     "#    reset_camera=True,\n",
     "#    position = (865.4844022079983, -276.23389988421786, 335.21716816984906),\n",
@@ -191,8 +218,10 @@
     "    zoom_speed=0.5,\n",
     "    pan_speed=0.5,\n",
     "    rotate_speed=1.0,\n",
-    "    js_debug=True,\n",
-    "    up=\"Z\"\n",
+    "    debug=True,\n",
+    "    up=\"Z\",\n",
+    "    explode=True,\n",
+    "    \n",
     ")"
    ]
   },
@@ -248,7 +277,7 @@
     "    #black_edges=True,\n",
     "\n",
     "    normal_len=2,\n",
-    "    default_edge_color=\"#f0f0f0\",\n",
+    "    default_edgecolor=\"#f0f0f0\",\n",
     "    default_opacity=0.5,\n",
     "    ambient_intensity=0.5,\n",
     "    direct_intensity=0.3,   \n",
@@ -278,6 +307,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fde0be32-e5a2-47d1-a6d9-e3cdc23c920f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"box1\"\n",
+    "show(    \n",
+    "    objects[name], \n",
+    "    states[name],\n",
+    "    reset_camera=Camera.CENTER,\n",
+    "    title=\"CVW 2\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0a85a650-fa48-410a-b79f-b3c112d33dcf",
    "metadata": {},
    "outputs": [],
@@ -287,8 +332,9 @@
     "    objects[name], \n",
     "    states[name],\n",
     "    title=\"CVW 2\",\n",
-    "    collapse=1,\n",
+    "    collapse=Collapse.ROOT,\n",
     "    glass=True,\n",
+    "    reset_camera=Camera.CENTER\n",
     ")"
    ]
   },
@@ -395,7 +441,7 @@
     "    height=600,\n",
     "    cad_width=800,\n",
     "    reset_camera=True,\n",
-    "    js_debug=True\n",
+    "    debug=True\n",
     ")"
    ]
   },
@@ -564,7 +610,7 @@
     "    cad_width=800,\n",
     "    title=\"Trackball\",\n",
     "    reset_camera=True,\n",
-    "    js_debug=True\n",
+    "    debug=True\n",
     ")"
    ]
   },
@@ -769,7 +815,7 @@
     "            states[name],\n",
     "            title=\"Examples\",\n",
     "            control=control,\n",
-    "            js_debug=True\n",
+    "            debug=True\n",
     "        )\n",
     "\n",
     "menu.observe(on_change)\n",
@@ -780,7 +826,7 @@
     "    title=\"Examples\",\n",
     "    control=control,\n",
     "#    zoom=0.75,\n",
-    "    js_debug=True\n",
+    "    debug=True\n",
     ")\n",
     "menu"
    ]
