--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e54596f1-61d6-4704-90de-a405f8fe6b00",
    "metadata": {},
    "outputs": [],
@@ -22,37 +22,66 @@
     "from cad_viewer_widget import (\n",
     "    AnimationTrack, CadViewer, show, open_viewer, \n",
     "    get_sidecar, get_sidecars, close_sidecar, close_sidecars, get_default_sidecar, set_default_sidecar,\n",
-    "    Collapse, Camera\n",
     ")\n",
     "\n",
     "from cad_viewer_widget.utils import numpyify\n",
     "\n",
-    "names = [\"hexapod\", \"box\", \"box1\", \"boxes\", \"faces\", \"edges\", \"vertices\", \"box-faces\", \"box-edges\", \"box-vertices\", \"longbox\"]\n",
+    "names = [\n",
+    "    \"b123d_assembly\",\n",
+    "    \"box1\",\n",
+    "    \"boxes\",\n",
+    "    \"dirbox\",\n",
+    "    \"edges\",\n",
+    "    \"faces\",\n",
+    "    \"hexapod\",\n",
+    "    \"orientbox\",\n",
+    "    \"profile4040\",\n",
+    "    \"single_edges\",\n",
+    "    \"torus_knot\",\n",
+    "]\n",
     "objects = {}\n",
     "states = {}\n",
     "\n",
     "for name in names:\n",
     "    with open(f\"../examples/{name}.json\", \"r\") as fd:\n",
-    "        objects[name] = numpyify(json.load(fd))\n",
-    "\n",
-    "    with open(f\"../examples/{name}-states.json\", \"r\") as fd:\n",
-    "        states[name] = json.load(fd)"
+    "        objects[name] = numpyify(json.load(fd))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b5da9e3e-b160-4db8-b683-da60aacd9938",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cad_width cannot be samller than 750\n",
+      "right\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"boxes\"\n",
+    "cv = show(    \n",
+    "    objects[name], \n",
+    "    reset_camera=\"reset\",\n",
+    "    glass=True,\n",
+    "    title=\"CVW 1\",\n",
+    "    anchor=\"right\",\n",
+    "    cad_width=700\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5da9e3e-b160-4db8-b683-da60aacd9938",
+   "id": "6871a8de-a3d5-4dc6-8569-ac2c69087f89",
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"boxes\"\n",
-    "show(    \n",
-    "    objects[name], \n",
-    "    states[name],\n",
-    "    reset_camera=Camera.KEEP,\n",
-    "    title=\"CVW 2\"\n",
-    ")"
+    "cv.widget.cad_width, cv.widget.height"
    ]
   },
   {
@@ -63,14 +92,35 @@
    "outputs": [],
    "source": [
     "name = \"hexapod\"\n",
-    "cv = show(\n",
+    "cv2 = show(\n",
     "    objects[name],\n",
-    "    states[name],\n",
     "    title=\"CVW 2\",\n",
-    "    collapse=Collapse.ROOT,\n",
+    "    collapse=\"1\",\n",
+    "    anchor=\"split-right\",\n",
+    "    cad_width=1200,\n",
     "    glass=True,\n",
-    "    reset_camera=Camera.KEEP\n",
+    "    reset_camera=\"reset\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3192131-2afc-49de-b653-af6282ce50a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.widget.cad_width, cv.widget.height"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c457d00-b1e6-4ac8-9142-a157b5bda562",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2.widget.cad_width, cv2.widget.height"
    ]
   },
   {
@@ -85,7 +135,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "78fdf9c0-e275-4ded-be2c-a16edc6c0bc0",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "name = \"boxes\"\n",
@@ -94,29 +146,36 @@
     "\n",
     "cv = show(\n",
     "    objects[name], \n",
-    "    states[name],\n",
     "    control=control,\n",
     "    up=\"Z\",\n",
     "    cad_width=750,\n",
     "    tree_width=250,\n",
-    "    height=600,\n",
+    "    height=500,\n",
     "    glass=False,\n",
     "    debug=False,\n",
-    "    collapse=Collapse.LEAVES,\n",
+    "    collapse=\"1\",\n",
     "    theme=\"browser\",\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7968b5ee-e28a-4416-b24b-88e5a864abcc",
+   "id": "58c97457-bdb4-4699-a35e-e4010afdbc77",
    "metadata": {},
    "source": [
     "## Exports\n",
     "\n",
-    "**Modify view before exporting**\n",
-    "\n",
-    "cv.export_png(\"boxes.png\")"
+    "**Modify view before exporting**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bce7ac1-ab98-47a4-ae5a-c9e5c4727789",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.export_png(\"boxes2.png\")"
    ]
   },
   {
@@ -190,7 +249,6 @@
     "name = \"hexapod\"\n",
     "cv1.add_shapes(\n",
     "    objects[name], \n",
-    "    states[name],\n",
     "    cad_width=700,\n",
     "    height=600,\n",
     "    #tools=False,\n",
@@ -228,6 +286,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cee24076-bb37-4092-b32f-e0acf8eebf81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.widget.position"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ab31ed53-c64c-46f2-8a8a-a34741d8efb2",
    "metadata": {},
    "outputs": [],
@@ -235,7 +303,6 @@
     "name = \"boxes\"\n",
     "show(\n",
     "    objects[name], \n",
-    "    states[name],\n",
     "    title=\"CVW 1\",\n",
     "    cad_width=800,\n",
     "    height=600,\n",
@@ -262,7 +329,6 @@
     "name = \"boxes\"\n",
     "cv2 = show(\n",
     "    objects[name], \n",
-    "    states[name],\n",
     "    title=\"CVW 2\",\n",
     "    anchor=\"split-right\",\n",
     "    height=600,\n",
@@ -314,7 +380,6 @@
     "name = \"box1\"\n",
     "show(    \n",
     "    objects[name], \n",
-    "    states[name],\n",
     "    reset_camera=Camera.CENTER,\n",
     "    title=\"CVW 2\"\n",
     ")"
@@ -330,7 +395,6 @@
     "name = \"hexapod\"\n",
     "cv = show(\n",
     "    objects[name], \n",
-    "    states[name],\n",
     "    title=\"CVW 2\",\n",
     "    collapse=Collapse.ROOT,\n",
     "    glass=True,\n",
@@ -347,7 +411,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "from cad_viewer_widget import AnimationTrack\n",
+    "# from cad_viewer_widget import AnimationTrack\n",
     "\n",
     "horizontal_angle = 25\n",
     "\n",
@@ -375,17 +439,28 @@
     "for name in leg_names:\n",
     "    # move upper leg\n",
     "    cv.add_track(AnimationTrack(\n",
-    "        f\"/bottom/{name}\", \n",
+    "        f\"/hexapod/{name}_leg\", \n",
     "        \"rz\", *horizontal(4, \"middle\" in name)\n",
     "    ))\n",
     "\n",
     "    # move lower leg\n",
     "    cv.add_track(AnimationTrack(\n",
-    "        f\"/bottom/{name}/lower\", \n",
+    "        f\"/hexapod/{name}_leg/{name}_lower_leg\", \n",
     "        \"rz\", *vertical(8, 4, 0 if name in leg_group else 4, \"left\" in name)\n",
     "    ))\n",
     "\n",
     "cv.animate(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ed80cfe-4ea1-4fad-a6c7-47893bc0f25c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hexapod = objects[\"hexapod\"]\n",
+    "hexapod[\"shapes\"]"
    ]
   },
   {
@@ -437,7 +512,6 @@
     "name = \"edges\"\n",
     "cv = show(\n",
     "    objects[name], \n",
-    "    states[name],\n",
     "    height=600,\n",
     "    cad_width=800,\n",
     "    reset_camera=True,\n",
@@ -455,7 +529,6 @@
     "name = \"faces\"\n",
     "cv2 = show(\n",
     "    objects[name], \n",
-    "    states[name],\n",
     "    height=600,\n",
     "    cad_width=800,    \n",
     "    title=\"CVW 2\"\n",
@@ -469,11 +542,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"vertices\"\n",
+    "name = \"single_vertices\"\n",
     "cv2 = show(\n",
     "    objects[name], \n",
-    "    states[name],\n",
-    "    reset_camera=False,\n",
+    "    reset_camera=\"reset\",\n",
     "    title=\"CVW 2\"\n",
     ")"
    ]
@@ -546,7 +618,6 @@
     "name = \"hexapod\"\n",
     "cv3 = show(\n",
     "    objects[name],\n",
-    "    states[name],\n",
     "    height=600,\n",
     "    cad_width=800,\n",
     "    control=\"trackball\",\n",
@@ -573,10 +644,9 @@
     "name = \"faces\"\n",
     "cv4 = show(\n",
     "    objects[name],\n",
-    "    states[name],\n",
     "\n",
-    "    cad_width=400,\n",
-    "    height=300,\n",
+    "    cad_width=600,\n",
+    "    height=400,\n",
     "    glass=True,\n",
     "    collapse=2,\n",
     "    pinning=True\n",
@@ -605,7 +675,6 @@
     "\n",
     "cv1 = show(\n",
     "    objects[name], \n",
-    "    states[name],\n",
     "    height=600,\n",
     "    cad_width=800,\n",
     "    title=\"Trackball\",\n",
@@ -645,9 +714,8 @@
     "name = \"faces\"\n",
     "show(\n",
     "    objects[name], \n",
-    "    states[name],\n",
     "    title=\"Trackball\",\n",
-    "    reset_camera=False\n",
+    "    reset_camera=\"keep\"\n",
     ")"
    ]
   },
@@ -669,9 +737,8 @@
     "name = \"faces\"\n",
     "cv = show(\n",
     "    objects[name], \n",
-    "    states[name],\n",
     "    title=\"Trackball\",\n",
-    "    reset_camera=True\n",
+    "    reset_camera=\"reset\"\n",
     ")"
    ]
   },
@@ -716,7 +783,6 @@
     "\n",
     "show(\n",
     "    objects[name], \n",
-    "    states[name],\n",
     "    title=\"Orbit\",\n",
     "    control=\"orbit\",\n",
     "    position=(-43.3, 73.7, -39.3),\n",
@@ -812,7 +878,6 @@
     "        name = change['new']\n",
     "        show(    \n",
     "            objects[name],\n",
-    "            states[name],\n",
     "            title=\"Examples\",\n",
     "            control=control,\n",
     "            debug=True\n",
@@ -822,7 +887,6 @@
     "\n",
     "show(\n",
     "    objects[names[0]],\n",
-    "    states[names[0]],\n",
     "    title=\"Examples\",\n",
     "    control=control,\n",
     "#    zoom=0.75,\n",
@@ -1186,7 +1250,6 @@
     "name = \"hexapod\"\n",
     "cv = show(\n",
     "    objects[name], \n",
-    "    states[name],\n",
     "    control=\"trackball\",\n",
     "    title=\"Examples\",\n",
     "    reset_camera=True,\n",
@@ -1240,7 +1303,6 @@
     "name = \"hexapod\"\n",
     "cv = show(\n",
     "    objects[name], \n",
-    "    states[name],\n",
     "    control=\"orbit\",\n",
     "    title=\"Examples\",\n",
     "    reset_camera=True\n",
@@ -1291,7 +1353,6 @@
     "name = \"hexapod\"\n",
     "cv = show(\n",
     "    objects[name],\n",
-    "    states[name],\n",
     "    title=\"Animation\",\n",
     "    height=600,\n",
     "    cad_width=800,\n",
@@ -1351,7 +1412,7 @@
     "\n",
     "for name in leg_names:\n",
     "    # move upper leg\n",
-    "    cv.add_track(AnimationTrack(f\"/bottom/{name}\", \"rz\", *horizontal(4, \"middle\" in name)))\n",
+    "    cv.add_track(AnimationTrack(f\"/hexapod/{name}_leg\", \"rz\", *horizontal(4, \"middle\" in name)))\n",
     "\n",
     "cv.animate(3)\n",
     "cv.play()"
@@ -1376,7 +1437,7 @@
    "source": [
     "for name in leg_names:\n",
     "    # move lower leg\n",
-    "    cv.add_track(AnimationTrack(f\"/bottom/{name}/lower\", \"rz\", *vertical(8, 4, 0 if name in leg_group else 4, \"left\" in name)))\n",
+    "    cv.add_track(AnimationTrack(f\"/hexapod/{name}_leg/{name}_lower_leg\", \"rz\", *vertical(8, 4, 0 if name in leg_group else 4, \"left\" in name)))\n",
     "    \n",
     "cv.animate(2)\n",
     "cv.play()"
@@ -1420,14 +1481,22 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python",
-   "pygments_lexer": "ipython3"
-  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
